 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_default_location"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_location_display_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_units_list_items"
        android:entryValues="@array/pref_units_list_values"
        android:key="@string/pref_units_key"
        android:title="@string/pref_temperature_units" />

</PreferenceScreen>
